# ModernMIDI

./: CMakeLists.txt
ModernMIDI/: midi_file_reader.cpp  midi_file_reader.h  midi_input.cpp  midi_input.h  midi_message.h  midi_output.cpp  midi_output.h
